Remove Gamma, macroify work_packages_and_reports a bit.

--- a/preamble.tex
+++ b/preamble.tex
@@ -45,6 +45,7 @@
 \providecommand{\tightlist}{\setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 
 \makeatletter
+\catcode`\¬=11
 \newcommand{\superimpose}[2]{{%
   \ooalign{%
     \hfil$\m@th#1\@firstoftwo#2$\hfil\cr
@@ -136,6 +137,9 @@
 \newcommand*{\fnfrac}[2]{\left\lfloor\nicefrac{#1}{#2}\right\rfloor}
 \newcommand*{\ffrac}[2]{\left\lfloor\frac{#1}{#2}\right\rfloor}
 \newcommand*{\transpose}{{}^\text{T}}
+
+% GP terms
+
 
 \title[JAM: Join-Accumulate Machine \\ {\smaller \textbf{Draft 0.2.3-pre \today}}]{Join-Accumulate Machine: A Semi-Coherent Scalable Trustless VM \\ {\smaller Draft 0.2.3-pre \today}}
 \author{
