--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -70,7 +70,7 @@
 \subsection{Functions}
 
 \begin{description}
-  \item[$\Gamma$] Item to result function. %	Γ
+%  \item[$\Gamma$] Unused. %	Γ
 %  \item[$\Delta$] Unused. %	Δ
 %  \item[$\Theta$] Unused. %	Θ
 %  \item[$\Pi$] Unused. %	Π
