--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -1,5 +1,15 @@
 \section{Work Packages and Work Reports}\label{sec:workpackagesandworkreports}
 
+\newcommand*{\wp¬context}{\mathbf{x}} % Consider rename to \mathbf{c}
+
+\newcommand*{\newavailabilityspecifier}{A}
+\newcommand*{\itemtoresult}{C}
+\newcommand*{\countupexports}{I}
+\newcommand*{\importsegmentdata}{M}
+\newcommand*{\pagedproofs}{P}
+\newcommand*{\marshallrefine}{R}
+\newcommand*{\extrinsicdata}{X}
+
 \subsection{Honest Behavior}
 
 We have so far specified how to recognize blocks for a correctly transitioning \Jam blockchain. Through defining the state transition function and a state Merklization function, we have also defined how to recognize a valid header. While it is not especially difficult to understand how a new block may be authored for any node which controls a key which would allow the creation of the two signatures in the header, nor indeed to fill in the other header fields, readers will note that the contents of the extrinsic remain unclear.
@@ -47,21 +57,18 @@ The guarantor is able to use this proof to justify to themselves that they are n
 
 \subsection{Packages and Items}\label{sec:packagesanditems}
 
-% TODO: Complete rename to \mathbf{c}
-\newcommand{\Tcontext}{\mathbf{x}}
-
-We begin by defining a \emph{work-package}, of set $\mathbb{P}$, and its constituent \emph{work item}s, of set $\mathbb{I}$. A work-package includes a simple blob acting as an authorization token $\mathbf{j}$, the index of the service which hosts the authorization code $h$, an authorization code hash $c$ and a parameterization blob $\mathbf{p}$, a context $\Tcontext$ and a sequence of work items $\mathbf{i}$:
+We begin by defining a \emph{work-package}, of set $\mathbb{P}$, and its constituent \emph{work item}s, of set $\mathbb{I}$. A work-package includes a simple blob acting as an authorization token $\mathbf{j}$, the index of the service which hosts the authorization code $h$, an authorization code hash $c$ and a parameterization blob $\mathbf{p}$, a context $\wp¬context$ and a sequence of work items $\mathbf{i}$:
 \begin{equation}\label{eq:workpackage}
   \mathbb{P} \equiv \tuple{\;\begin{aligned}
-    &\isa{\mathbf{j}}{\Y},\ \isa{h}{\N_\mathsf{S}},\ \isa{c}{\H},\\
-    &\isa{\mathbf{p}}{\Y},\ \isa{\Tcontext}{\mathbb{X}},\ \isa{\mathbf{i}}{\seq{\mathbb{I}}_{1:\mathsf{I}}}
+    &\isa{\mathbf{j}}{\Y},\ \isa{h}{\N_S},\ \isa{c}{\H},\\
+    &\isa{\mathbf{p}}{\Y},\ \isa{\wp¬context}{\mathbb{X}},\ \isa{\mathbf{i}}{\seq{\mathbb{I}}_{1:\mathsf{I}}}
   \end{aligned}}
 \end{equation}
 
 A work item includes: $s$ the identifier of the service to which it relates, the code hash of the service at the time of reporting $c$ (whose preimage must be available from the perspective of the lookup anchor block), a payload blob $y$, a gas limit $g$, and the three elements of its manifest, a sequence of imported data segments $\mathbf{i}$ identified by the root of the \emph{segments tree} and an index into it, $\mathbf{x}$, a sequence of hashed of data segments to be introduced in this block (and which we assume the validator knows) and $e$ the number of data segments exported by this work item:
 \begin{equation}\label{eq:workitem}
     \mathbb{I} \equiv \tuple{\begin{aligned}
-      &\isa{s}{\N_\mathsf{S}} \ts
+      &\isa{s}{\N_S} \ts
       \isa{c}{\H} \ts
       \isa{\mathbf{y}}{\Y} \ts
       \isa{g}{\N_G} \ts \\
@@ -83,16 +90,16 @@ We make an assumption that the preimage to each extrinsic hash in each work-item
 We limit the encoded size of a work-package plus the total size of the implied import and extrinsic items to 12\textsc{mb} in order to allow for around 2\textsc{mb}/s/core data throughput:
 \begin{align}
   \label{eq:checkextractsize}
-  \forall p &\in \mathbf{P}: \left(
+  \forall p &\in \mathbb{P}: \left(
   \sum_{i \in p_\mathbf{i}} |i_\mathbf{i}|\cdot\mathsf{W}_S\mathsf{W}_C + \sum_{i \in p_\mathbf{i}} \sum_{\mathcal{H}(\mathbf{x}) \in i_x} |\mathbf{x}|\right) \le \mathsf{W}_P \\
   \mathsf{W}_P &= 12\cdot2^{20}
 \end{align}
 
 %The implication of equation \ref{eq:checkextractsize} is that we have access to the preimage of all extrinsic data. For guaranteeing, this implies the work-package author probably submits the preimages alongside the work-package itself. For auditing, the extrinsic preimages may be reconstructed in the same manner as the work-package. Both are described later.
 
-We define the item-to-result function $\Gamma$ as:
+We define the item-to-result function $\itemtoresult$ as:
 \begin{equation}
-  \Gamma\colon\left\{\begin{aligned}
+  \itemtoresult\colon\left\{\begin{aligned}
     (\mathbb{I}, \Y \cup \mathbb{J}) &\to \mathbb{L}\\
     ((s, c, \mathbf{y}, g), o) &\mapsto (s, c, \mathcal{H}(\mathbf{y}), g, o)
   \end{aligned}\right.
@@ -114,9 +121,9 @@ Any of a work-package's work-items may \emph{export} segments and a \emph{segmen
 
 Guarantors are required to erasure-code and distribute two data sets: one blob, the auditable work-package containing the encoded work-package, extrinsic data and self-justifying imported segments which is placed in the short-term Audit DA store and a second set of exported-segments data together with the \emph{Paged-Proofs} metadata. Items in the first store are short-lived; assurers are expected to keep them only until finality of the block which included the work-result. Items in the second, meanwhile, are long-lived and expected to be kept for a minimum of 28 days (672 complete epochs) following the reporting of the work-report.
 
-We define the paged-proofs function $P$ which accepts a series of exported segments $\mathbf{s}$ and defines some series of additional segments placed into the Imports DA system via erasure-coding and distribution. The function evaluates to pages of hashes, together with subtree proofs, such that justifications of correctness based on a segments-root may be made from it:
+We define the paged-proofs function $\pagedproofs$ which accepts a series of exported segments $\mathbf{s}$ and defines some series of additional segments placed into the Imports DA system via erasure-coding and distribution. The function evaluates to pages of hashes, together with subtree proofs, such that justifications of correctness based on a segments-root may be made from it:
 \begin{equation}\label{eq:pagedproofs}
-  P\colon\left\{\begin{aligned}
+  \pagedproofs\colon\left\{\begin{aligned}
     \seq{\G} &\to \seq{\G} \\
     \mathbf{s} &\mapsto [\mathcal{P}_{\mathsf{W}_S}(\mathcal{J}_6(\mathbf{s}, i) \concat \wideparen{\mathbf{s}_{i\dots+64}}) \mid i \orderedin 64\cdot\N_{\ceil{\nicefrac{|\mathbf{s}|}{64}}}]
   \end{aligned}\right.
@@ -142,34 +149,35 @@ Formally:
 where:
 \begin{align*}
   \mathbf{o} &= \Psi_I(\mathbf{p}, c) \\
-  (\mathbf{r}, \overline{\mathbf{e}}) &= \transpose[(\Gamma(\mathbf{p}_\mathbf{i}[j], r), \mathbf{e}) \mid (r, \mathbf{e}) = I(\mathbf{p}, j), j \orderedin \N_{|\mathbf{p}_\mathbf{i}|}] \\
-  I(\mathbf{p}, j) &\equiv R(\mathbf{p}, \mathbf{p}_\mathbf{i}[j], \sum_{k < j}\mathbf{p}_\mathbf{i}[k]_e)\\
-  R(\mathbf{p}, i, \ell) &\equiv \Psi_R(i_c, i_g, i_s, \mathcal{H}(\mathbf{p}), i_\mathbf{y}, \mathbf{p}_\Tcontext, \mathbf{p}_a, M(i), X(i), \ell)
+  (\mathbf{r}, \overline{\mathbf{e}}) &= \transpose[(\itemtoresult(\mathbf{p}_\mathbf{i}[j], r), \mathbf{e}) \mid (r, \mathbf{e}) = \countupexports(\mathbf{p}, j), j \orderedin \N_{|\mathbf{p}_\mathbf{i}|}] \\
+  \countupexports(\mathbf{p}, j) &\equiv \marshallrefine(\mathbf{p}, \mathbf{p}_\mathbf{i}[j], \sum_{k < j}\mathbf{p}_\mathbf{i}[k]_e)\\
+  \marshallrefine(\mathbf{p}, i, \ell) &\equiv \Psi_R(i_c, i_g, i_s, \mathcal{H}(\mathbf{p}), i_\mathbf{y}, \mathbf{p}_\wp¬context, \mathbf{p}_a, \importsegmentdata(i), \extrinsicdata(i), \ell)
 \end{align*}
 
 The definition here is staged over several functions for ease of reading. The first term to be introduced, $\mathbf{o}$ is the authorization output, the result of the Is-Authorized function. The second term, $(\mathbf{r}, \overline{\mathbf{e}})$ is the sequence of results for each of the work-items in the work-package together with all segments exported by each work-item.
 
-The third and forth definition are helper terms for this, with the third performing an ordered accumulation (\ie counter) in order to ensure that the Refine function has access to the total number of exports made from the work package up to the current work-item. The fourth term, $R$, is essentially just a call to the Refine function, marshalling the relevant data from the work-package and work-item.
+The third and forth definition are helper terms for this, with the third $\countupexports$ performing an ordered accumulation (\ie counter) in order to ensure that the Refine function has access to the total number of exports made from the work package up to the current work-item. The fourth term, $\marshallrefine$, is essentially just a call to the Refine function, marshalling the relevant data from the work-package and work-item.
 
-The above relies on two functions, $M$ and $X$ which, respectively, define the import segment data and the extrinsic data for some work-item argument $i$:
+
+The above relies on two functions, $\importsegmentdata$ and $\extrinsicdata$ which, respectively, define the import segment data and the extrinsic data for some work-item argument $i$:
 \begin{equation}
   \begin{aligned}
-    M(i \in \mathbb{I}) &\equiv [\mathbf{s}[n] \mid (\mathcal{M}(\mathbf{s}), n) \orderedin i_\mathbf{i}] \\
-    X(i \in \mathbb{I}) &\equiv [x \mid \mathcal{H}(x) \orderedin i_\mathbf{x}]
+    \importsegmentdata(i \in \mathbb{I}) &\equiv [\mathbf{s}[n] \mid (\mathcal{M}(\mathbf{s}), n) \orderedin i_\mathbf{i}] \\
+    \extrinsicdata(i \in \mathbb{I}) &\equiv [x \mid \mathcal{H}(x) \orderedin i_\mathbf{x}]
   \end{aligned}
 \end{equation}
 
-We may then define $s$ as the data availability specification of the package using these two functions together with the yet to be defined \emph{Availability Specifier} function $A$ (see section \ref{sec:availabiltyspecifier}):
+We may then define $s$ as the data availability specification of the package using these two functions together with the yet to be defined \emph{Availability Specifier} function $\newavailabilityspecifier$ (see section \ref{sec:availabiltyspecifier}):
 \begin{equation}
   \begin{aligned}
-    s &= A(\mathcal{H}(\mathbf{p}), \se(\var{\mathbf{p}}, \mathbf{x}, \mathbf{i}, \mathbf{j}), \wideparen{\overline{\mathbf{e}}}) \\
-    \nonumber \where \mathbf{x} &= [[\var{\se(\mathbf{x})} \mid \mathbf{x} \in X(i)] \mid i \orderedin \mathbf{p}_\mathbf{i}]\\
-    \nonumber \also \mathbf{i} &= [M(i) \mid i \orderedin \mathbf{p}_\mathbf{i}]\\
+    s &= \newavailabilityspecifier(\mathcal{H}(\mathbf{p}), \se(\var{\mathbf{p}}, \mathbf{x}, \mathbf{i}, \mathbf{j}), \wideparen{\overline{\mathbf{e}}}) \\
+    \nonumber \where \mathbf{x} &= [[\var{\se(\mathbf{x})} \mid \mathbf{x} \in \extrinsicdata(i)] \mid i \orderedin \mathbf{p}_\mathbf{i}]\\
+    \nonumber \also \mathbf{i} &= [\importsegmentdata(i) \mid i \orderedin \mathbf{p}_\mathbf{i}]\\
     \nonumber \also \mathbf{j} &= [\mathcal{J}(\mathbf{s}, n) \mid (\mathcal{M}(\mathbf{s}), n) \orderedin i_\mathbf{i}, i \orderedin \mathbf{p}_\mathbf{i}]
   \end{aligned}
 \end{equation}
 
-Note that while $M$ and $\mathbf{j}$ are both formulated using the term $\mathbf{s}$ (all segments exported by all work packages exporting a segment to be imported) such a vast amount of data is not generally needed as the justification can be derived through a single paged-proof. This reduces the worst case data fetching for a guarantor to two segments for every one to be imported. In the case that contiguously exported segments are imported (which we might assume is a fairly common situation), then a single proof-page should be sufficient to justify many imported segments.
+Note that while $\importsegmentdata$ and $\mathbf{j}$ are both formulated using the term $\mathbf{s}$ (all segments exported by all work packages exporting a segment to be imported) such a vast amount of data is not generally needed as the justification can be derived through a single paged-proof. This reduces the worst case data fetching for a guarantor to two segments for every one to be imported. In the case that contiguously exported segments are imported (which we might assume is a fairly common situation), then a single proof-page should be sufficient to justify many imported segments.
 
 The Is-Authorized logic it references is first executed to ensure that the work-package warrants the needed core-time. Next, the guarantor should ensure that all segment-tree roots which form imported segment commitments are known and have not expired. Finally, the guarantor should ensure that they can fetch all preimage data referenced as the commitments of extrinsic segments.
 
@@ -180,9 +188,9 @@ Validators, in their role as availability assurers, should index such chunks acc
 %TODO: Make result an error if the number of exported segments > stated number of exports. (If less, then additional ones are assumed to be zeroed.)
 
 \subsubsection{Availability Specifier}\label{sec:availabiltyspecifier}
-We define the availability specifier function $A$, which creates an availability specifier from the package hash, an octet sequence of the audit-friendly work-package bundle (comprising the work-package itself, the extrinsic data and the concatenated import segments along with their proofs of correctness), and the sequence of exported segments:
+We define the availability specifier function $\newavailabilityspecifier$, which creates an availability specifier from the package hash, an octet sequence of the audit-friendly work-package bundle (comprising the work-package itself, the extrinsic data and the concatenated import segments along with their proofs of correctness), and the sequence of exported segments:
 \begin{equation}
-  \!\!\!A\colon\left\{\,\begin{aligned}
+  \!\!\!\newavailabilityspecifier\colon\left\{\,\begin{aligned}
     &\tuple{\H, \Y, \seq{\G}} \to \mathbb{S}\\
     &\tup{h, \mathbf{b},\,\mathbf{s}} \mapsto \tup{
       h,\,
@@ -197,12 +205,12 @@ We define the availability specifier function $A$, which creates an availability
     [\wideparen{\mathbf{x}} \mid \mathbf{x} \in \transpose[\mathbf{b}^\clubsuit, \mathbf{s}^\clubsuit]]
   )\\
   \also \mathbf{b}^\clubsuit &= \mathcal{H}^\#(\mathcal{C}_{\ceil{\nicefrac{|\mathbf{b}|}{\mathsf{W}_C}}}(\mathcal{P}_{\mathsf{W}_C}(\mathbf{b})))\\
-  \also \mathbf{s}^\clubsuit &= \mathcal{M}_B^\#(\transpose\mathcal{C}^\#_6(\mathbf{s} \concat P(\mathbf{s})))
+  \also \mathbf{s}^\clubsuit &= \mathcal{M}_B^\#(\transpose\mathcal{C}^\#_6(\mathbf{s} \concat \pagedproofs(\mathbf{s})))
 \end{align*}
 
 % TODO: \mathbb{S}_h is now the hash of the work-package bundle, not the work-package itself. This is a change from the original document... does anything break with it?
 
-The paged-proofs function $P$, defined earlier in equation \ref{eq:pagedproofs}, accepts a sequence of segments and returns a sequence of paged-proofs sufficient to justify the correctness of every segment. There are exactly $\ceil{\nicefrac{1}{64}}$ paged-proof segments as the number of yielded segments, each composed of a page of 64 hashes of segments, together with a Merkle proof from the root to the subtree-root which includes those 64 segments.
+The paged-proofs function $\pagedproofs$, defined earlier in equation \ref{eq:pagedproofs}, accepts a sequence of segments and returns a sequence of paged-proofs sufficient to justify the correctness of every segment. There are exactly $\ceil{\nicefrac{1}{64}}$ paged-proof segments as the number of yielded segments, each composed of a page of 64 hashes of segments, together with a Merkle proof from the root to the subtree-root which includes those 64 segments.
 
 The functions $\mathcal{M}$ and $\mathcal{M}_B$ are the fixed-depth and simple binary Merkle root functions, defined in equations \ref{eq:constantdepthmerkleroot} and \ref{eq:simplemerkleroot}. The function $\mathcal{C}$ is the erasure-coding function, defined in appendix \ref{sec:erasurecoding}.
 
@@ -217,3 +225,12 @@ And $\mathcal{P}$ is the zero-padding function to take an octet array to some mu
 Validators are incentivized to distribute each newly erasure-coded data chunk to the relevant validator, since they are not paid for guaranteeing unless a work-report is considered to be \emph{available} by a super-majority of validators. Given our work-package $\mathbf{p}$, we should therefore send the corresponding work-package bundle chunk and exported segments chunks to each validator whose keys are together with similarly corresponding chunks for imported, extrinsic and exported segments data, such that each validator can justify completeness according to the work-report's \emph{erasure-root}. In the case of a coming epoch change, they may also maximize expected reward by distributing to the new validator set.
 
 We will see this function utilized in the next sections, for guaranteeing, auditing and judging.
+
+\undef{\wp¬context}
+\undef{\newavailabilityspecifier}
+\undef{\itemtoresult}
+\undef{\countupexports}
+\undef{\importsegmentdata}
+\undef{\pagedproofs}
+\undef{\marshallrefine}
+\undef{\extrinsicdata}
