beta_dagger is used to check for WR guarantees context

--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -276,9 +276,9 @@ There must be no duplicate work-package hashes (\ie two work-reports of the same
   |\mathbf{p}| = |\mathbf{w}|
 \end{equation}
 
-We require that the anchor block be within the last $\mathsf{H}$ blocks and that its details be correct by ensuring that it appears within our most recent blocks $\beta$:
+We require that the anchor block be within the last $\mathsf{H}$ blocks and that its details be correct by ensuring that it appears within our most recent blocks $\beta^\dagger$:
 \begin{align}
-  \forall x \in \mathbf{x} : \exists y \in \beta : x_a = y_h \wedge x_s = y_s \wedge x_b = \mathcal{M}_R(y_\mathbf{b})\!\!\!\!\!\!
+  \forall x \in \mathbf{x} : \exists y \in \beta^\dagger : x_a = y_h \wedge x_s = y_s \wedge x_b = \mathcal{M}_R(y_\mathbf{b})\!\!\!\!\!\!
 \end{align}
 
 We require that each lookup-anchor block be within the last $\mathsf{L}$ timeslots:
