--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -125,10 +125,10 @@ The signature must be one whose public key is that of the validator assuring and
 \end{align}
 
 A bit may only be set if the corresponding core has a report pending availability on it:
-\begin{align}
-  &\forall a \in \xtassurances, c \in \N_\mathsf{C} :\\
-  &\quad a_f[c] \Rightarrow \rho^\dagger[c] \ne \none
-\end{align}
+\begin{equation}
+  \forall a \in \xtassurances, c \in \N_\mathsf{C} :
+  \quad a_f[c] \Rightarrow \rho^\dagger[c] \ne \none
+\end{equation}
 
 \subsubsection{Available Reports}
 A work-report is said to become \emph{available} if and only if there are a clear \nicefrac{2}{3} super-majority of validators who have marked its core as set within the block's assurance extrinsic. Formally, we define the sequence of newly available work-reports $\mathbf{W}$ as:
@@ -237,12 +237,10 @@ We denote $\mathbf{w}$ to be the set of work-reports in the present extrinsic $\
   \text{let}\ \mathbf{w} = \{ g_w \mid g \in \xtguarantees \}
 \end{align}
 
-No reports may be placed on cores with a report pending availability on it unless it has timed out. In the latter case, $\mathsf{U} = 5$ slots must have elapsed after the report was made. A report is valid only if the authorizer hash is present in the authorizer pool of the core on which the work is reported. Formally:
+No reports may be placed on cores with a report pending availability on it. A report is valid only if the authorizer hash is present in the authorizer pool of the core on which the work is reported. Formally:
 \begin{equation}\label{eq:reportcoresareunusedortimedout}
-  \forall w \in \mathbf{w} :\left\{\;\begin{aligned}
-    &\rho^\ddagger[w_c] = \none \vee \mathbf{H}_t \ge \rho^\ddagger[w_c]_t + \mathsf{U}\ , \\
-    &w_a \in \alpha[w_c]
-  \end{aligned}\right.
+  \forall w \in \mathbf{w} :
+    \rho^\ddagger[w_c] = \none \wedge w_a \in \alpha[w_c]
 \end{equation}
 
 We require that the gas allotted for accumulation of each work item in each work-report respects its service's minimum gas requirements. We also require that all work-reports total allotted accumulation gas is no greater than the overall gas limit $\mathsf{G}_A$:
